# sdf-engine

./: .gitmodules  CMakeLists.txt  aperature.hpp  gl.hpp  image.cpp  logging.hpp  main.cpp  mesh.cpp  mesh.hpp  shader.hpp
shaders/: albedo.frag  basic.frag  basic.vert  gbuffer.frag  gbuffer.vert  quad.frag  quad.vert  render.glsl
